<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.gta.demo.BluetoothMenu"
    android:background="@drawable/logo_background_transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWbluetooth"
                android:gravity="center_vertical|end"
                android:layout_gravity="end" />

            <TextView
                android:text="@string/enable_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TXTbluetooth"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        </FrameLayout>

        <Button
            android:text="@string/bluetooth_paired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNlistpaireddevices" />

        <Button
            android:text="@string/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNconnect_bt" />

    </LinearLayout>

</RelativeLayout>
