<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context="com.project.gta.demo.MainMenu"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">



    <!--*android:textStyle="italic"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout"
        android:orientation="vertical"/>
        <ImageView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/logo_waterme_300x300"
        android:id="@+id/logo_main_menu"
        android:cropToPadding="false"
        android:contentDescription="@string/logo"
        android:onClick="onClick" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="269dp"
        android:id="@+id/mainmenu"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TXTtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <Button
            android:text="@string/plant_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/BTNmyplants"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water" />

        <Button
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/BTNsettings"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water" />

        <Button
            android:text="@string/help_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/BTNhelp"
            android:backgroundTint="@color/water"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/BTNabout"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water" />

    </LinearLayout>

</LinearLayout>