<resources>

    <!-- General -->
    <string name="logo">Logo von WaterMe</string>
    <string name="app_name">WaterMe</string>

    <!-- Main Menu -->
    <string name="plant_menu">My plants</string>
    <string name="help_menu">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- About Menu -->
    <string name="TXTabout">
        WaterMe is the software engineering project of three students at the cooperative states university Karlsruhe, Germany.\n
        \n
        Starting in october 2016 we planned to create a system which can measure the humidity of a plant and
        notify the user about when to water the plant.\n
        We were inspired by our own everyday life. \n
        As we could not handle to water our plants and keep them alive, we knew we had to change something. \n
        \n
        The system is based on a Raspberry Pi and sensors. In addition an application is provided to receive notifications from the Pi. \n
        The sensors measure the humidity of the soil. \n
        The Pi processes this data and sends it via Bluetooth to the application.\n
        \n
        Follow our progress on gtaproject.wordpress.com
    </string>
    <string name="jodel">The jodel community approves:</string>

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="raspberry_leds">Raspberry LEDs</string>
    <string name="raspberry_wifi">Raspberry WiFi</string>
    <string name="sounds">Sounds</string>
    <string name="submit">Submit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable_bluetooth">Bluetooth</string>
    <string name="bluetooth_paired">Connect to paired device</string>
    <string name="bluetooth_found">Find new devices</string>
    <string name="reload">Reload</string>
    <string name="connect">connect</string>
    <string name="MyPlant">My Plant</string>
    <string name="graph">Graph</string>

    <!-- help -->
    <string name="AskUs">Ask Us</string>
    <string name="helpEnableBtAndConnectPi">Enable Bluetooth and connect Pi</string>
    <string name="helpInstallPi">Install Pi</string>
    <string name="helpAddPlant">Add plant</string>
    <string name="help_connect_bluetooth_and_pi">
        Prequisite: \n
        Your Smartphone has to be paired with the Pi. \n
        To do so head to the Bluetooth-Menu of your Smartphone, enable Bluetooth and click on your Pi. \n
        \n
        \n
        \n
        First enable Bluetooth: \n
        \n
        From the main menu \n
        1: Press Settings \n
        2: Press the switch "Bluetooth" \n
        3: Agree to the notification \n
        \n
        \n
        Then the app automatically connects to the PIí when you are trying to perfom an action which reuqires bluetooth-connection.

    </string>
    <string name="help_install_pi">
        To make the Pi work properly it has to be installed according to the images below.
        \n
        For a larger picture, please visit:
    </string>
    <string name="set_up_link">https://github.com/AkymenkoOlga/WaterMe/tree/master/Pics/Help</string>
    <string name="help_add_plant">
        To add an additional plant \n
        \n
        From the main menu \n
        1: Press MyPlants \n
        2: Press the + in the top-right corner \n
        3: Choose an image \n
        4: Enter the name of your plant \n
        5: Press OK \n
        \n
        \n
        To delete a plant: \n
        \n
        In the MyPlants menu: \n
        1: Press the trashcan next to the plant
    </string>

    <!-- Plant Menu -->
    <string name="loewenzahn">Mein Löwenzahn</string>
    <string name="plant">Plant</string>
    <string name="getHumidity">get Humidity</string>
    <string name="Humidity">Humidity</string>
    <string name="percent">%</string>
    <!-- Pflanzen-Namen -->

    <string-array name="plants_name">
        <item> Plant1</item>
        <item> Plant2</item>
        <item> Plant3</item>
        <item> Plant4</item>
        <item> Plant5</item>
        <item> Plant6</item>
    </string-array>

    <!-- Bilder -->

    <string name="profil_pic">
        <item>@drawable/Plant1</item>
        <item>@drawable/Plant2</item>
        <item>@drawable/Plant3</item>
        <item>@drawable/Plant4</item>
        <item>@drawable/Plant5</item>
        <item>@drawable/Plant6</item>
    </string>

    <!-- Graph -->
    <string name="ViewGraph">View Graph</string>
    <string name="hours24">24 h</string>
    <string name="days3">3 days</string>
    <string name="week1">1 week</string>
    <string name="showCourse">show course of</string>
    <string name="optimal">optimal</string>
    <string name="alarm">Alarm</string>
    <string name="changescale">Change scale</string>
    <string name="clickme">Click me</string>
    <string name="delete">delete data</string>

    <!--PlantSelect/MyPlants-->
    <string name="MyPlants">MyPlants</string>


</resources>
