...
            android:textSize="22sp" />

        <Button
            android:text="@string/bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNbluetooth"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

    </LinearLayout>

...
