<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.gta.demo.HelpMenu"
    android:orientation="vertical">

    <Button
        android:text="@string/AskUs"
        android:id="@+id/BTNhelpAskus"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/water"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textColor="?android:attr/textColorPrimaryInverse" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="How to:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="30sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:text="@string/helpEnableBtAndConnectPi"
            android:id="@+id/BTNhelpBluetoothPi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water"/>

        <Button
            android:text="@string/helpInstallPi"
            android:id="@+id/BTNhelpInstallPi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water"/>

        <Button
            android:text="@string/helpAddPlant"
            android:id="@+id/BTNhelpAddPlant"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water"/>

    </LinearLayout>

</RelativeLayout>
